--- a/src/org/oop/view/segreteria/FormImmatricolazione.form
+++ b/src/org/oop/view/segreteria/FormImmatricolazione.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="808" height="537"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-2171170"/>
+    </properties>
     <border type="none"/>
     <children>
       <hspacer id="79f63">
@@ -28,6 +30,7 @@
         </constraints>
         <properties>
           <enabled value="false"/>
+          <foreground awt-color="black"/>
           <text value="Compila il form per stampare il modulo di immatricolazione"/>
         </properties>
       </component>
@@ -36,7 +39,9 @@
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-2171170"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="3ef41" class="javax.swing.JLabel" binding="matricolalabel">
@@ -233,7 +238,9 @@
         <constraints>
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-2171170"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="30cd3" class="javax.swing.JButton" binding="submit">
