--- a/src/org/oop/view/segreteria/Iscrizione.form
+++ b/src/org/oop/view/segreteria/Iscrizione.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-2171170"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="b8818" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,14 +15,18 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-2171170"/>
+        </properties>
         <border type="none"/>
         <children>
           <scrollpane id="ae361" binding="scrollpanetable">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-2171170"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="54e0b" class="javax.swing.JTable" binding="tabellaiscrizione">
@@ -36,7 +42,9 @@
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-2171170"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="1f61c" class="javax.swing.JButton" binding="editButton">
@@ -75,7 +83,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-2171170"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="6ba4c" class="javax.swing.JLabel">
