--- a/src/org/oop/view/segreteria/Segreteria.form
+++ b/src/org/oop/view/segreteria/Segreteria.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-1644826"/>
+    </properties>
     <border type="none"/>
     <children>
       <tabbedpane id="d1196" binding="maintabpane">
