--- a/src/org/oop/view/segreteria/Tasse.form
+++ b/src/org/oop/view/segreteria/Tasse.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-2171170"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="18c7f" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,7 +15,9 @@
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-2171170"/>
+        </properties>
         <border type="none"/>
         <children>
           <scrollpane id="a8a0b">
@@ -36,7 +40,9 @@
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-2171170"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="f447f" class="javax.swing.JButton" binding="removeButton">
@@ -75,7 +81,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-2171170"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="5aedc" class="javax.swing.JLabel">
